--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 html,body {
     height: 100%;
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+::-webkit-scrollbar-track {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #c5c5c5;    
+}
 .container-fluid {
     background-color: #333;
     padding: 20px;
@@ -18,6 +31,7 @@ html,body {
 .nav {
     border: 2px solid rgba(112, 112, 112, 0.3);
     border-bottom: none;
+    border-top: none;
     width: 15%;
     height: 100%;
     float: left;
@@ -53,4 +67,12 @@ html,body {
 .text-layout {
     margin-left: 60px;
     margin-top: 30px;
+}
+.ol {
+    margin-top: 30px;
+}
+.images {
+    margin: 30px 0 30px 0;
+    width: 500px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 1);
 }
